# EDCOCR-PUBLIC

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Dockerfile.frontend  INSTALL.md  LICENSE  Makefile  NOTICE  OCR_GPU.py  README.md  SECURITY.md  SUPPORT.md  adaptive_batch.py  advanced_preprocessing.py  barcode_extraction.py  barcode_pipeline.py  benchmark_ocr.py  benchmark_pipeline.py  classification.py  cost_tracking.py  credential_manager.py  custody.py  custody_hooks.py  docker-compose.yml  download_models.py  dpi_escalation.py  easyocr_engine.py  embedding_service.py  engine_selection.py  entity_consolidator.py  (+69 more)
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
api/: __init__.py  analytics.py  audit.py  audit_middleware.py  auth.py  batch_manager.py  batch_models.py  cloud_storage.py  config.py  dashboard.py  database.py  db_security.py  deps.py  entity_index.py  event_bus.py  event_store.py  events.py  fleet_status.py  identity.py  job_log_writer.py  job_manager.py  limits.py  main.py  models.py  oauth2.py  oauth2_config.py  output_manifest.py  path_safety.py  prometheus.py  queue_alerting.py  quota.py  request_size_limit.py  review_queue.py  security_headers.py  slo.py  sse_notifier.py  tenant_manager.py  tenant_rate_limiter.py  tracing.py  usage.py  (+4 more)
benchmark_results/: baseline.json  benchmark_simulate_456bf6dd0f0b.json
sdk/python/: README.md  pyproject.toml
sdk/python/src/edcocr_sdk/: __init__.py  cli.py  client.py  exceptions.py  mcp_server.py  models.py
(+1076 files in other folders)
